# Thunder

./: .gitignore  CMakeLists.txt  HowToUse.md  README.md  Readme.txt  SDL2_header.cpp  SDL2_header.h  Thunder.cbp  Thunder.depend  Thunder.layout  cleanup.h  deal.cpp  draw.cpp  draw.h  item.cpp  item.h  lib.rar  main.cpp  main1.cpp  main2.cpp  pointd.hpp  res_path.h
include/: SDL2_header.h  deal.h  draw.h  item.h  others.h  pointd.h  res_path.h
res/: highestscore
